# ec-odoo-openupgrade-wizard

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGES.rst  CONTRIBUTORS.md  DEVELOP.md  INTERNAL_NOTES.md  README.md  ROADMAP.md  actualizar_base_de_datos.sh  comprobar_datos.sh  config.yml  modules.csv  pyproject.toml  pytest.ini  python3-13.misc
odoo_openupgrade_wizard/: __main__.py  configuration_version_dependant.py
odoo_openupgrade_wizard/cli/: cli.py  cli_copydb.py  cli_docker_build.py  cli_dropdb.py  cli_dumpdb.py  cli_estimate_workload.py  cli_execute_script_python.py  cli_execute_script_sql.py  cli_generate_module_analysis.py  cli_get_code.py  cli_init.py  cli_install_from_csv.py  cli_options.py  cli_psql.py  cli_pull_submodule.py  cli_restoredb.py  cli_run.py  cli_upgrade.py
odoo_openupgrade_wizard/templates/: analysis.html.j2  config.yml.j2
odoo_openupgrade_wizard/templates/odoo/: repos.yml.j2
odoo_openupgrade_wizard/templates/odoo/11.0/: Dockerfile
odoo_openupgrade_wizard/templates/odoo/12.0/: Dockerfile
odoo_openupgrade_wizard/templates/odoo/13.0/: Dockerfile
odoo_openupgrade_wizard/templates/odoo/14.0/: Dockerfile
odoo_openupgrade_wizard/tools/: tools_click_odoo_contrib.py  tools_docker.py  tools_odoo.py  tools_odoo_instance.py  tools_odoo_module.py  tools_postgres.py  tools_system.py
scripts/step_01__regular__14.0/: post-migration.py  pre-migration.sql
scripts/step_02__openupgrade__15.0/: post-migration.py  pre-migration.sql
scripts/step_03__openupgrade__16.0/: post-migration.py
scripts/step_04__regular__16.0/: post-migration.py  pre-migration.sql
src/env_14.0/: Dockerfile  extra_python_requirements.txt  odoo.conf  repos.yml
src/env_15.0/: Dockerfile  extra_python_requirements.txt  odoo.conf  repos.yml
src/env_16.0/: Dockerfile  extra_python_requirements.txt  odoo.conf  repos.yml
tests/: __init__.py  cli_01_init_test.py  cli_02_get_code_test.py  cli_03_docker_build_test.py  cli_04_run_test.py  cli_05_execute_script_python_test.py  cli_06_execute_script_sql_test.py  cli_07_upgrade_test.py  cli_08_estimate_workload_test.py  cli_20_install_from_csv_test.py  cli_21_generate_module_analysis_test.py  cli_22_dumpdb_test.py  cli_23_restoredb_test.py  cli_30_psql_test.py  cli_31_copydb_test.py  cli_32_dropdb_test.py  cli_40_downgrade_pg_auth_method_for_old_versions_test.py
tests/data/extra_script/: 01-post-migration-custom_test.py  02-post-migration-custom_test.py  pre-migration-custom_test.sql
tests/data/output_expected/: config.yml
tests/data/restoredb/: test.dump
